# OpenQ4-GameLibs

./: .gitignore  AGENTS.md  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: commit-validation.yml
src/: meson.build
src/bse/: BSEInterface.h
src/framework/: BuildVersion.h  Common.h  DeclPDA.h  File.h  UsercmdGen.h  declManager.h  declMatType.h  declPlayback.h
src/game/: AFEntity.cpp  Actor.cpp  BrittleFracture.cpp  BrittleFracture.h  Camera.cpp  Effect.cpp  Entity.cpp  Game.h  GameEdit.cpp  Game_Debug.h  Game_local.cpp  Game_local.h  Game_network.cpp  Game_render.cpp  Item.cpp  Item.h  Misc.cpp  Mover.cpp  MultiplayerGame.cpp  Player.cpp  Player.h  Pvs.cpp  SecurityCamera.cpp  SplineMover.cpp  Target.cpp  Weapon.cpp
src/idlib/: Dict.cpp  Lexer.cpp  Lib.cpp  Parser.cpp  Str.cpp  Token.h  mapfile.cpp  precompiled.h
src/mpgame/: AFEntity.cpp  AFEntity.h  Actor.cpp  BrittleFracture.cpp  Camera.cpp  Camera.h  Effect.cpp  Entity.cpp  GameEdit.cpp  Game_local.cpp  Game_local.h  Game_network.cpp  Item.cpp  Item.h  Misc.cpp  Mover.cpp  Mover.h  MultiplayerGame.cpp  Player.cpp  Player.h  Player_States.cpp  SecurityCamera.cpp  SplineMover.cpp  Trigger.cpp  Trigger.h  Weapon.cpp
src/renderer/: Material.h  Model.h  RenderSystem.h  RenderWorld.h  glext.h  qgl.h
src/sys/: sys_public.h
tools/tests/: arm64_abi_contract.py  binary_token_signed_char_probe.cpp  crc_checksum_probe.cpp  linux_portability_contract.py  linux_portability_probe.cpp  lp64_semantics_probe.cpp  macos_meson_contract.py  md4_checksum_probe.cpp  md5_checksum_probe.cpp  (+1 more)
(+98 files in other folders)
