option(
  'build_spgame',
  type : 'boolean',
  value : true,
  description : 'Build the single-player game module (game-sp_<arch>.dll/.so/.dylib).',
)

option(
  'build_mpgame',
  type : 'boolean',
  value : true,
  description : 'Build the multiplayer game module (game-mp_<arch>.dll/.so/.dylib).',
)

option(
  'inline_debug',
  type : 'boolean',
  value : false,
  description : 'Enable legacy DebugInline behavior for debug builds (_INLINEDEBUG, with /Ob1 on MSVC).',
)

option(
  'mssdk_include',
  type : 'string',
  value : '',
  description : 'Optional legacy SDK include path relative to src/ (for example mssdk/include).',
)
